# Homework1

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  READMEhomework.md  main.cpp
diitpahomework1/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
diitpahomework1/include/: car_trailer.h  machine_car_trailer.h
diitpahomework1/src/: CarTrailer.cpp  MachineCarTrailer.cpp
diitpahomework1/tests/: CMakeLists.txt  catch2Main.cpp  testCarTrailer.cpp  testMachineCarTrailer.cpp
include/: machine.h  motrice.h
min-cmake-prj-master/: CMakeLists.txt  main.cpp
min-cmake-prj-master/include/: cxx_examples.h  my_fraction.h
min-cmake-prj-master/src/: MyFraction.cpp
min-cmake-prj-master/tests/: testMyFraction.cpp
src/: CxxExamples.cpp  machine.cpp  motrice.cpp
tests/: CMakeLists.txt  testCxxExamples.cpp  testmachine.cpp  testmotrice.cpp
